--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URL=mongodb://localhost/bookworm
 JWT_SECRET=secretkeywii
+HOST=http://localhost:3000
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=307a1a3f6efde7
+EMAIL_PASS=	932af7308a23f8
