--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
-    "mongoose-unique-validator": "^1.0.6"
+    "mongoose-unique-validator": "^1.0.6",
+    "nodemailer": "^4.4.1"
   }
 }
