--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
     "mongoose-unique-validator": "^1.0.6",
-    "nodemailer": "^4.4.1"
+    "nodemailer": "^4.4.1",
+    "request-promise": "^4.2.2",
+    "xml2js": "^0.4.19"
   }
 }
