added Book entity with schema

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ HOST=http://localhost:3000
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USER=307a1a3f6efde7
-EMAIL_PASS=	932af7308a23f8
+EMAIL_PASS=932af7308a23f8
+GOODREADS_KEY=p69OrRMMYSw6go8otXnaAw
