--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^1.8.2"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
